# backend

./: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  api.rest  kubernetes.tf  pyproject.toml  terraform.tfvars.example
.github/workflows/: main.yaml
alembic/: env.py
app/: config.py
assets/: tables.dbdiagram  tables.dbml
fastapi/models/: __init__.py  product.py
fastapi/routers/: __init__.py  products.py
fastapi/schemas/: product.py
migration/: env.py  script.py.mako
migrations/: env.py
migrations/versions/: 001_create_product_table.py
restapi/: database.py  main.py
restapi/schemas/: __init__.py
restapi/services/: __init__.py  product_service.py
